@@ -1,7 +1,7 @@
 /* bug-221100.c
 
-   If test_index is char, loses high bit when indexes table 
-   workaround is to use [(unsigned int) test_index] 
+   If test_index is char, loses high bit when indexes table
+   workaround is to use [(unsigned int) test_index]
  */
 #include <testfwk.h>
 
@@ -21,7 +21,7 @@ testArray[ARRAY_SIZE] = {
    70,  71,  72,  73,  74,  75,  76,  77,  78,  79,
    80,  81,  82,  83,  84,  85,  86,  87,  88,  89,
    90,  91,  92,  93,  94,  95,  96,  97,  98,  99,
-  100, 101,  02, 103, 104, 105, 106, 107, 108, 109,
+  100, 101, 102, 103, 104, 105, 106, 107, 108, 109,
   110, 111, 112, 113, 114, 115, 116, 117, 118, 119,
   120, 121, 122, 123, 124, 125, 126, 127, 128, 129,
 };
